// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brand should render correctly with link not provided 1`] = `
.c3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c1 {
  max-width: 80rem;
  margin: 0 auto;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c2 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  height: 1.5rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c4:hover .c2,
.c4:focus .c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:25rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:25rem) {
  .c2 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c2 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      height={24}
      viewBox="0 0 167.95 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillrule="evenodd"
      >
        <path
          d="M84.32"
        />
      </g>
    </svg>
    <span
      className="c3"
      role="text"
    >
      <span
        lang="en-GB"
      >
        Default Brand Name
      </span>
      , 
      Service
    </span>
  </div>
</div>
`;

exports[`Brand should render correctly with link provided 1`] = `
.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c1 {
  max-width: 80rem;
  margin: 0 auto;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c3 {
  display: inline-block;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c4 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  height: 1.5rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c2:hover .c4,
.c2:focus .c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:25rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:25rem) {
  .c4 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c4 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2 c3"
      href="https://www.bbc.co.uk/news"
    >
      <svg
        aria-hidden="true"
        className="c4"
        focusable="false"
        height={24}
        viewBox="0 0 167.95 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillrule="evenodd"
        >
          <path
            d="M84.32"
          />
        </g>
      </svg>
      <span
        className="c5"
        role="text"
      >
        <span
          lang="en-GB"
        >
          Default Brand Name
        </span>
        , 
        Service
      </span>
    </a>
  </div>
</div>
`;

exports[`Brand should render correctly with no service Localised Name 1`] = `
.c3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c1 {
  max-width: 80rem;
  margin: 0 auto;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c2 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  height: 1.5rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c4:hover .c2,
.c4:focus .c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:25rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:25rem) {
  .c2 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c2 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      height={24}
      viewBox="0 0 167.95 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillrule="evenodd"
      >
        <path
          d="M84.32"
        />
      </g>
    </svg>
    <span
      className="c3"
    >
      BBC News
    </span>
  </div>
</div>
`;

exports[`Brand should render correctly with transparent borders 1`] = `
.c3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c1 {
  max-width: 80rem;
  margin: 0 auto;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
  border-top: 0.0625rem solid transparent;
  border-bottom: 0.0625rem solid transparent;
}

.c2 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  height: 1.5rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c4:hover .c2,
.c4:focus .c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:25rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:25rem) {
  .c2 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c2 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      height={24}
      viewBox="0 0 167.95 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillrule="evenodd"
      >
        <path
          d="M84.32"
        />
      </g>
    </svg>
    <span
      className="c3"
    >
      BBC News
    </span>
  </div>
</div>
`;
